--- a/Mark's Code Bin/index.html
+++ b/Mark's Code Bin/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <div id="bodyContainer">
-    <textarea class="section" id="htmlSection"><p id="red">Base Html</p></textarea>
+    <textarea class="section" id="htmlSection"><p id="red">Basic Html</p></textarea>
     <textarea class="section hidden" id="cssSection">p{color: green;}</textarea>
     <textarea class="section hidden" id="javascriptSection">document.getElementById("red").innerHTML= "Helloe";</textarea>
     <iframe class="section" id="outputSection"></iframe>
