--- a/Mark's Code Bin/index.html
+++ b/Mark's Code Bin/index.html
@@ -21,9 +21,9 @@
   </div>
 
   <div id="bodyContainer">
-    <textarea class="section" id="htmlSection"><p id="red">Basic Html</p></textarea>
-    <textarea class="section hidden" id="cssSection">p{color: green;}</textarea>
-    <textarea class="section hidden" id="javascriptSection">document.getElementById("red").innerHTML= "Helloe";</textarea>
+    <textarea class="section" id="htmlSection"></textarea>
+    <textarea class="section hidden" id="cssSection"</textarea>
+    <textarea class="section hidden" id="javascriptSection"></textarea>
     <iframe class="section" id="outputSection"></iframe>
   </div>
 
